<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="200dp"
        android:layout_height="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="5781-whatsapp-default-state-animation.json"
        app:lottie_loop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_view"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#434343"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:backgroundTint="#fff"
                        android:padding="5dp"
                        app:ccp_countryPreference="IN"
                        app:ccp_defaultNameCode="IN"
                        app:ccp_enablePhoneAutoFormatter="false"
                        app:ccp_textColor="#fff" />

                    <EditText
                        android:id="@+id/phone_number_edt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="60"
                        android:backgroundTint="#fff"
                        android:fontFamily="monospace"
                        android:hint="@string/phone"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="5dp"
                        android:textColor="#fff"
                        android:textColorHint="#fff" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#434343"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                tools:layout_editor_absoluteX="15dp">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#fff"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:hint="@string/message"
                    android:importantForAutofill="no"
                    android:inputType="textLongMessage"
                    android:padding="15dp"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#25d366"
                android:drawableEnd="@drawable/ic_send_black_24dp"
                android:onClick="sendbtn"
                android:padding="10dp"
                android:text="@string/sendBTN"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#434343"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/fastMessage"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/fast_replay_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#25d366"
                android:onClick="fastReplayOne_btn"
                android:padding="10dp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#25d366"
                android:onClick="fastReplayTwo_btn"
                android:padding="10dp"
                android:text="@string/fastMessage_1"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#25d366"
                android:onClick="fastReplayThree_btn"
                android:padding="10dp"
                android:text="@string/fastMessage_2"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#25d366"
                android:onClick="fastReplayFour_btn"
                android:padding="10dp"
                android:text="What's up?"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#25d366"
                android:onClick="fastReplayFive_btn"
                android:padding="10dp"
                android:text="What's going on?"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>